[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Menus/MainMenu_button_pressed.png" type="Texture" id=1]
[ext_resource path="res://Assets/Menus/MainMenu_button_hover.png" type="Texture" id=2]
[ext_resource path="res://Assets/Menus/MainMenu_button_not_pressed.png" type="Texture" id=3]
[ext_resource path="res://Events/EndScreen.gd" type="Script" id=4]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/Menus/Acme____.ttf"

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://Assets/Menus/Acme____.ttf"

[sub_resource type="DynamicFont" id=5]
size = 22
font_data = SubResource( 4 )

[node name="EndGame" type="Control"]
margin_right = 648.0
margin_bottom = 472.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = -72.0
margin_top = -40.0
margin_right = 672.0
margin_bottom = 528.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Labels" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Labels"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -167.5
margin_top = -40.5
margin_right = 167.5
margin_bottom = 40.5
custom_fonts/font = SubResource( 2 )
text = "Thank you for playing
My Game!!!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Labels"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -331.0
margin_top = 1160.0
margin_right = 331.0
margin_bottom = 1787.0
custom_fonts/font = SubResource( 3 )
text = "Background Music:

8 Bit Surf
8 Bit Adventure
by David Renda

A Bit of Hope
by David Fesliyan

Music Pack 1
by Swiss Arcade Game Entertainment


Sound Effects:

\"The Essential Retro Video Game
Sound Effects Collection\"
by Subspace Audio on opengameart.com"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Labels"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -324.0
margin_top = 256.0
margin_right = 338.0
margin_bottom = 1128.0
custom_fonts/font = SubResource( 3 )
text = "Producer:

Jason Abrams


Game Developers:

Jason Abrams


Alpha/Beta Testers:

Jason Abrams


Bug Testers:

Jason Abrams


Art:

Jason Abrams

"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="Labels"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -332.0
margin_top = 1960.0
margin_right = 330.0
margin_bottom = 2064.0
custom_fonts/font = SubResource( 3 )
text = "Duck Noises:

Alred the Duck"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="Labels"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -332.0
margin_top = 2288.0
margin_right = 330.0
margin_bottom = 2392.0
custom_fonts/font = SubResource( 3 )
text = "Fin.
But did you find the secret?"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="Labels/Label5"]
margin_left = 40.0
margin_top = 120.0
margin_right = 136.0
margin_bottom = 184.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoreLbl" type="Label" parent="Labels/Label5"]
margin_left = 176.0
margin_top = 136.0
margin_right = 303.0
margin_bottom = 164.0
custom_fonts/font = SubResource( 5 )
text = "High Score: "
align = 1
valign = 1

[node name="Tween" type="Tween" parent="."]
[connection signal="pressed" from="Labels/Label5/TextureButton" to="." method="_on_TextureButton_pressed"]
